--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 Poe-Wheel-Spawner
 
-Poe::Wheel::Run based way to arrange a minimal required nummer of processes
+run a workload in one process and spawn a next one if required.
 
 INSTALLATION
 
