--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Poe-Wheel-Spawner
 
+0.021.1 2016-10-24
+        * add abstract into POD
+        * version declaration with qv
+
+0.02    2014-12-23
+        * POD tests
+        * perltidy
+ 
 0.01    2014-12-19
         First version, released on an unsuspecting world.
 
