--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Poe-Wheel-Spawner
+POE-Wheel-Spawner
 
 run a workload in one process and spawn a next one if required.
 
@@ -16,21 +16,21 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc Poe::Wheel::Spawner
+    perldoc POE::Wheel::Spawner
 
 You can also look for information at:
 
     RT, CPAN's request tracker (report bugs here)
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Poe-Wheel-Spawner
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=POE-Wheel-Spawner
 
     AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Poe-Wheel-Spawner
+        http://annocpan.org/dist/POE-Wheel-Spawner
 
     CPAN Ratings
-        http://cpanratings.perl.org/d/Poe-Wheel-Spawner
+        http://cpanratings.perl.org/d/POE-Wheel-Spawner
 
     Search CPAN
-        http://search.cpan.org/dist/Poe-Wheel-Spawner/
+        http://search.cpan.org/dist/POE-Wheel-Spawner/
 
 
 LICENSE AND COPYRIGHT
